pullrequest/pipeline/templates/pull-request-pipeline-eventlistener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: el-pull-request-pipeline
  namespace: ci
spec:
  type: ClusterIP
  selector:
    eventlistener: pull-request-pipeline-eventlistener
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
