pullrequest/pipeline/templates/pull-request-pipeline-eventlistener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: el-pull-request-pipeline
  namespace: ci
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-pull-request-pipeline-eventlistener
    weight: 100
  wildcardPolicy: None
